--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.19</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.paulcwarren</groupId>
+            <artifactId>spring-content-fs-boot-starter</artifactId>
+            <version>1.0.0.M6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.paulcwarren</groupId>
+            <artifactId>content-fs-spring-boot-starter</artifactId>
+            <version>1.0.0.M6</version>
+        </dependency>
     </dependencies>
 
     <build>
