- added session time into properties file - delete some entities - add/change some video rest controller methods - added session service, for operating with session variables - change videoController methods - add new package for exceptions - add VideoIdException class e.t.c

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+server.servlet.session.timeout = 15m
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.dataSource.url=jdbc:mysql://localhost:3307/lmtube?useTimezone=true&serverTimezone=UTC
 spring.dataSource.username=lmtube
 spring.dataSource.password=Passwd039
+
 
 spring.jpa.hibernate.ddl-auto=update
 
