--- a/config/application.properties
+++ b/config/application.properties
@@ -1,13 +1,8 @@
 server.servlet.session.timeout = 15m
 
-
 server.servlet.context-path=/lmtube
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.dataSource.url=jdbc:mysql://localhost:3307/lmtube?useTimezone=true&serverTimezone=UTC
-spring.dataSource.username=lmtube
-spring.dataSource.password=Passwd039
-
+spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=update
 
