--- a/config/application-prod.properties
+++ b/config/application-prod.properties
@@ -1,5 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 spring.dataSource.driverClassName=org.postgresql.Driver
-spring.dataSource.url=jdbc:postgresql://p-lmplay-as01:5432/lmplay
-spring.dataSource.username=lmplay
-spring.dataSource.password=BM0Mt!omK$
+spring.dataSource.url=
+spring.dataSource.username=
+spring.dataSource.password=
