- some bugs fixes - added service system users

--- a/config/application-dev.properties
+++ b/config/application-dev.properties
@@ -2,3 +2,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.dataSource.url=jdbc:mysql://localhost:3307/lmtube?useTimezone=true&serverTimezone=UTC
 spring.dataSource.username=lmtube
 spring.dataSource.password=Passwd039
+
+service.users.creator.username=60000001
+service.users.creator.password=qwerty
+service.users.moderator.username=60000002
+service.users.moderator.password=qwerty
+service.users.administrator.username=60000003
+service.users.administrator.password=ertyui
