--- a/config/application.properties
+++ b/config/application.properties
@@ -2,7 +2,7 @@ server.servlet.session.timeout = 15m
 
 server.servlet.context-path=/lmtube
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -10,3 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=200MB
 # max request size
 spring.servlet.multipart.max-request-size=200MB
+
+service.users.creator.username=60000001
+service.users.creator.password=qwerty
+service.users.moderator.username=60000002
+service.users.moderator.password=qwerty
+service.users.administrator.username=60000003
+service.users.administrator.password=ertyui
