- some bug fixes and optimisations

--- a/config/application.properties
+++ b/config/application.properties
@@ -16,4 +16,4 @@ service.users.creator.password=qwerty
 service.users.moderator.username=60000002
 service.users.moderator.password=qwerty
 service.users.administrator.username=60000003
-service.users.administrator.password=ertyui
+service.users.administrator.password=qwerty
